complete raw UI

--- a/src/app/views/progress-alert/progress-alert.component.html
+++ b/src/app/views/progress-alert/progress-alert.component.html
@@ -2,9 +2,9 @@
     <div class="alert-container"><!---->
         <div class="alert-content">
             <div class="progress-spinner"></div>
-            <h3 *ngIf="data.title" class="alert-title" xas-string="">{{data.title}}</h3> 
-            <p *ngIf="data.message">
-                <span class="alert-additional-info" xas-string="">{{data.message}}</span>
+            <h3 *ngIf="" class="alert-title" xas-string=""></h3> 
+            <p *ngIf="">
+                <span class="alert-additional-info" xas-string=""></span>
             </p>
         </div>
     </div>
@@ -13,9 +13,9 @@
     <div class="alert-container">
         <div class="alert-content">
             <img src="../../../assets/Content/Images/spin.gif "> 
-            <h3 *ngIf="data.title" class="alert-title" xas-string="">{{data.title}}</h3> 
-            <p *ngIf="data.message">
-                <span class="alert-additional-info" xas-string="">{{data.message}}</span>
+            <h3 *ngIf="" class="alert-title" xas-string=""></h3> 
+            <p *ngIf="">
+                <span class="alert-additional-info" xas-string=""></span>
             </p>
     </div>
     </div>
