--- a/src/app/views/alert-banner/alert-banner.component.html
+++ b/src/app/views/alert-banner/alert-banner.component.html
@@ -3,7 +3,7 @@
         <tr>
             <td style="width:100%;">
                 <div class="banner-text-container">
-                    <span class="banner-text" xasString="{{data.message}}"></span>
+                    <span class="banner-text" xasString="Test"></span>
                 </div>
             </td>
             <td>
