--- a/src/app/views/general-alert/general-alert.component.html
+++ b/src/app/views/general-alert/general-alert.component.html
@@ -6,16 +6,12 @@
 
         <div class="alert-content">
 
-            <h3 class="alert-title" xasString="{{data.title}}"></h3>
-            <div *ngIf="data.additionalInfo" class="alert-additional-info" xasString="{{data.additionalInfo}}"></div>
-            <div *ngIf="data.additionalInfo2" class="alert-additional-info" xasString="{{data.additionalInfo2}}"></div>
+            <h3 class="alert-title" xasString="Test"></h3>
+            <div *ngIf="" class="alert-additional-info" xasString=""></div>
+            <div *ngIf="" class="alert-additional-info" xasString=""></div>
 
 
-            <div class="alert-button-container"><!-- -->
-                <button type="button" (click)="button1();" tabindex="-1" class="{{this.button1Classes}}" >{{this.button1Text}}</button><!--{{$ctrl.button1Classes}} {{$ctrl.button1Text}} -->
-                <button type="button" class="{{this.button2Classes}}" 
-                        *ngIf="data.button2Callback != null" (click)="button2()" tabindex="-1">{{this.button2Text}}</button>
-            </div>
+           
 
         </div>
 
