--- a/src/app/views/privacy-policy/privacy-policy.component.html
+++ b/src/app/views/privacy-policy/privacy-policy.component.html
@@ -17,12 +17,10 @@
         </div>
     </div>
 
-    <div class="popup-content privacy_content" >
-        <div   id="privacyContent" ><!--class="privacy_scroll-container"ngScrollable  ='{"autoHeight": true, "watchHeight": true}'-->
-            <pre class="privacy-policy-content" >{{this.privacyPolicy}}</pre>
-    <div class="popup-content">
-        <div class="scroll-container">
+    <div class="popup-content" >
+        <div class="scroll-container" style="overflow:hidden" ngScrollable='{"autoHeight": true, "watchHeight": true}'>
             <pre class="privacy-policy-content">{{this.privacyPolicy}}</pre>
         </div>
     </div>
 </div>
+
