--- a/src/styles.less
+++ b/src/styles.less
@@ -1,3 +1,4 @@
+@import '../node_modules/@angular/cdk/overlay-prebuilt.css';
 @import './assets/Content/Styles/text.less';
 @import './assets/Content/Styles/colors.less';
 @import './assets/Content/Styles/shadows.less';
@@ -10,104 +11,13 @@
 @import './assets/Content/Styles/textField.less';
 
 
-
-.error_updated
+/* .error_updated
 {
     color:#fff;
     font-size: 13px;
 }
 
-.makeItMiddle{
-    margin:0px;
 
-    //transform: translate(-50%, -50%);
-}
-
-.arrow {
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  transform: translateX(-50%);
-}
-
-.arrow-segment {
-  width: 1px;
-  height: 2px;
-  margin-top: 1px;
-  background-color: #000; /* Adjust the color as needed */
-}
-
-.cdk-overlay-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-.cdk-overlay-backdrop {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-
-//original css prior to change
-.custom-modalbox {
-    mat-dialog-container {
-        padding: 1px;
-        cursor:pointer;
-        border-radius: 4px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.24);       
-    }
-}
-
-.popup-rotate.contents {
-  transform: rotate(270deg);
-  transform-origin: left top;
-  direction: rtl;
-}
-
-.cdk-overlay-pane.custom-modalbox{
-
-  max-width: fit-content; 
-  position: relative; 
-  margin-left: 495px; 
-  margin-top: 320px;
-}
-
-.progress-bar-modalbox{
-    overflow: hidden;
-    margin:auto;
-    
-    opacity: 1 !important;
-    position: fixed
-}
-
-
-.form-control {
-    height: 62px;
-    color: #fff;
-    background-color: transparent;
-    background-clip: padding-box;
-    border: 1px solid #380a2e;
-    border-radius: 3px;
-}
-
-.form-control:focus {
-    //color: #212529;
-    color: #380a2e;
-    background-color: #fff;
-    border-color: #f406c0;
-    outline: 0;
-    box-shadow: 0 0 0 0.25rem #ae0689;
-}
 
 .ad-themed ::placeholder {
     color: white;
@@ -116,7 +26,7 @@
 
 .editable-field-input {
     width: calc(100% + 15px);
-    /*margin-top: 5px;*/
+    //margin-top: 5px;
     margin-top: -16px;
     margin-left: -16px !important;
     border: none;
@@ -130,3 +40,4 @@
       font-size: 24px;
     }
   }
+  */
