--- a/src/app/views/privacy-policy/privacy-policy.component.less
+++ b/src/app/views/privacy-policy/privacy-policy.component.less
@@ -2,7 +2,7 @@
 /* matters of copyrightable material and information now allowed by statutory or judicial law or hereinafter granted, */
 /* including without limitation, material generated from the software programs which are displayed on the screen such */
 /* as icons, screen display looks, etc. */
-@import (optional) '../../../assets/Content/Styles/text.less';
+@import '../../../assets/Content/Styles/text.less';
 
 privacy-policy {
     .popup-content {
