--- a/src/assets/Content/Styles/textField.less
+++ b/src/assets/Content/Styles/textField.less
@@ -1,5 +1,5 @@
 ﻿// Copyright © 2019 Xerox Corporation. All Rights Reserved.
-@import (optional) '../Styles/buttons.less';
+@import './buttons.less';
 
 text-field {
 
