--- a/src/styles.less
+++ b/src/styles.less
@@ -1,4 +1,4 @@
-@import '../node_modules/@angular/cdk/overlay-prebuilt.css';
+@import './assets/Content/Styles/overlay-prebuilt.css';
 @import './assets/Content/Styles/text.less';
 @import './assets/Content/Styles/colors.less';
 @import './assets/Content/Styles/shadows.less';
