--- a/src/assets/Content/Styles/buttons.less
+++ b/src/assets/Content/Styles/buttons.less
@@ -1,5 +1,5 @@
-﻿@import (optional) 'text.less';
-@import (optional) 'colors.less';
+﻿@import  './text.less';
+@import  './colors.less';
 
 button {
     cursor: pointer;
