--- a/src/app/views/privacy-policy/privacy-policy.component.less
+++ b/src/app/views/privacy-policy/privacy-policy.component.less
@@ -4,7 +4,7 @@
 /* as icons, screen display looks, etc. */
 @import '../../../assets/Content/Styles/text.less';
 
-privacy-policy {
+:host{
     .popup-content {
         height: 396px;
         overflow: hidden;
